# snake

./: .gitignore  LICENSE  README.md  Snake.sln  贪吃蛇.sln
Snake_C/: CMakeLists.txt  README.md  console.c  console.h  food.c  food.h  main.c  snake.c  snake.h  utility.c  utility.h
Snake_C/scene/: game_scene.c  game_scene.h  gameover_scene.c  start_scene.c  start_scene.h
Snake_CSharp/: README.md
Snake_Cpp/: README.md  main.cpp  snake.h
Snake_Cpp_Refactoring/: ColorChooseScene.h  GameScene.h  HighestScoreScene.h  README.md  StartScene.cpp  console.cpp  food.cpp  main.cpp
Snake_PyQt/: Config.py  Director.py  README.md  Snake.py  Snake_PyQt.pyproj  Window.py
Snake_Qt/: Config.h  Director.h  Food.cpp  GameScene.h  HighestScoreScene.cpp  README.md  Snake.cpp  Snake.h  Snake.vcxproj  Snake.vcxproj.filters  StartScene.h
snake_c/: CMakeLists.txt  README.md  utility.c
snake_c/scene/: game_scene.h  highestscore_scene.c  start_scene.c  start_scene.h
snake_c/src/: main.c
snake_c/src/auto/: auto.c  auto.h
snake_c/src/ql/: ql.c  ql.h
snake_c/src/scene/: game_scene.c  game_scene.h  gameover_scene.c  gameover_scene.h  highestscore_scene.c  highestscore_scene.h  playmode_scene.c  playmode_scene.h  start_scene.c  start_scene.h
snake_c/src/sprite/: food.c  snake.c  snake.h
snake_c/src/utility/: console.c  console.h  utility.c  utility.h
snake_cpp/: CMakeLists.txt  FunctionDefine.cpp
snake_cpp_refactoring/: CMakeLists.txt  ColorChooseScene.cpp  Config.cpp  DifficultyChooseScene.cpp  HighestScoreScene.cpp  StartScene.h  snake.cpp
snake_cs/: Config.cs  Program.cs  README.md
snake_go/: .gitignore  README.md  go.mod  main.go
snake_qt5/: CMakeLists.txt  Config.cpp  DifficultyChooseScene.cpp  DifficultyChooseScene.h  Director.cpp  Food.h  GameScene.cpp  HighestScoreScene.h  README.md  Scene.cpp  Scene.h  SettingScene.cpp  SettingScene.h  Snake_Qt.qrc  StartScene.cpp  ThemeChooseScene.cpp  ThemeChooseScene.h  Window.cpp  Window.h  main.cpp
(+86 files in other folders)
